# generate-awesome

./: .env.example  .gitignore  DEPLOYMENT.md  PROJECT_README.md  SETUP_GUIDE.md  app.py  deployment_structure.md  pyproject.toml  requirements.txt  start-all.ps1  start-backend.ps1  start-frontend.ps1  test_flow.py
agent/: graph.py  tools.py
agent/generated_project/: index.html  script.js  style.css
backend/: app.py  pyproject.toml  render.yaml  requirements.txt
backend/agent/: graph.py  states.py  tools.py
frontend/: .gitignore  README.md  package-lock.json  package.json  pnpm-lock.yaml  vercel.json
frontend/public/: index.html
frontend/src/: App.css  App.tsx  types.ts
frontend/src/app/: layout.tsx
frontend/src/app/api/files/: route.ts
frontend/src/app/api/generate/: route.ts
frontend/src/app/api/status/[id]/: route.ts
frontend/src/app/dashboard/: page.tsx
frontend/src/components/: ProjectViewer.css  ProjectViewer.tsx  PromptInput.css  PromptInput.tsx  header.tsx  hero-section.tsx  project-preview.tsx  theme-toggle.tsx
frontend/src/hooks/: useProjectGeneration.ts
frontend/static/: script.js  style.css
frontend/templates/: index.html
